--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@
 body{
     background: url(asset/image/bg1.jpg) no-repeat center;
     background-size: 100% 100%;
+    height: 80vh;
 }
 .wrapper{
-margin: 10% 25%; 
+margin: 12% 25%; 
 display: flex;
 align-items: center;
 justify-content: center;
-height: 60vh;
+height: 50vh;
 backdrop-filter: blur(20px);
 background-color: transparent;
-
 width: 50%;
 }
 .card{
@@ -48,11 +48,65 @@ width: 50%;
 .get-weather-btn{
      outline: none;
      color: royalblue; 
-     font-size: 0.7rem !important;
+     font-size: 0.8rem !important;
      width: auto;
+   
+     :hover{
+        background-color: aqua !important;
+     }
 }
 .weather-content{
     color: blue;
     font-size: 1rem;
     font-weight: light;
+}
+@media screen and (max-width:767px) {
+    body{
+    background: url(asset/image/bg1.jpg) no-repeat center;
+    background-size: 100% 100%;
+    height: 75vh;
+}
+.wrapper{
+margin: 50% 10%; 
+height: 30vh;
+width: 80%;
+}
+.weather-input{
+   border-radius: 10px;
+   width: 100%;
+   
+    padding: 3% 5%;
+    outline: none;
+    color: royalblue;
+}
+.weather-input::placeholder{
+    font-size: 0.8rem;
+    color: royalblue;
+}
+.get-weather-btn{
+     outline: none;
+     color: royalblue; 
+     font-size: 0.7rem !important;
+     width: auto;
+      padding: 3% 2%;
+}
+.weather-content{
+    color: blue;
+    font-size: 0.8rem;
+    font-weight: light;
+}
+}
+
+@media screen and (max-width:1220px) and (min-width:768px) {
+    body{
+    background: url(asset/image/bg1.jpg) no-repeat center;
+    background-size: 100% 100%;
+    height: 80vh;
+}
+.wrapper{
+margin: 25% 20%; 
+height: 35vh;
+width: 50%;
+}
+
 }
